# medical-ai-engineer

./: .clinerules  .gitignore  README.md  pyproject.toml
modules/m01_python_foundations/: README.md
modules/m01_python_foundations/s11_advanced_production_python/: README.md
modules/m01_python_foundations/s12_async_backend_api/: README.md
modules/m01_python_foundations/s13_data_manipulation_libraries/: README.md
modules/m01_python_foundations/s14_enterprise_containerization/: README.md
modules/m02_vector_databases/: README.md
modules/m02_vector_databases/s21_sql_nosql_extraction/: README.md
modules/m02_vector_databases/s22_text_image_chunking/: README.md
modules/m02_vector_databases/s23_data_embeddings/: README.md
modules/m02_vector_databases/s24_vector_db_hnsw/: README.md
modules/m03_machine_learning/: README.md
modules/m03_machine_learning/s31_linear_algebra_stats/: README.md
modules/m03_machine_learning/s32_supervised_learning/: README.md
modules/m03_machine_learning/s33_unsupervised_learning/: README.md
modules/m03_machine_learning/s34_model_evaluation/: README.md
modules/m04_deep_learning_cv/: README.md
modules/m04_deep_learning_cv/s41_neural_networks_backprop/: README.md
modules/m04_deep_learning_cv/s42_cnn_spatial_processing/: README.md
modules/m05_llm_transformers/: README.md
modules/m06_advanced_rag/: README.md
modules/m07_agentic_ai/: README.md
modules/m08_model_optimization/: README.md
modules/m09_observability_llmops/: README.md
modules/m10_medical_ai/: README.md
scripts/: setup_workspace.py
(+33 files in other folders)
